Opened 13 years ago

Closed 13 years ago

#2632 closed defect (fixed)

DVB Subtitles in ts file are not recognized.

Reported by: tomdouce Owned by:
Priority: important Component: avformat
Version: git-master Keywords: dvbsub mpegts regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description (last modified by Clément Bœsch)

Hello,

I have a ts file where the subtitles are not recognized. FFmpeg detects the correct number of streams but flags the subtitle streams as unknown.

5 MB sample provided (extracted from 2GB sample file)

% ffmpeg -i /L/dvbs_fail_sample_2.ts 2G -analyzeduration 2G /L/output.ts
ffmpeg version N-53782-g2976e2a Copyright (c) 2000-2013 the FFmpeg developers
  built on Jun  3 2013 03:43:43 with gcc 4.7.3 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetyp
e --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --ena
ble-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-l
ibopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libsp
eex --enable-libtheora --enable-libtwolame --enable-libvo-aacenc --enable-libvo-
amrwbenc --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --
enable-libxvid --enable-zlib
  libavutil      52. 34.100 / 52. 34.100
  libavcodec     55. 14.100 / 55. 14.100
  libavformat    55.  8.102 / 55.  8.102
  libavdevice    55.  2.100 / 55.  2.100
  libavfilter     3. 74.101 /  3. 74.101
  libswscale      2.  3.100 /  2.  3.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  3.100 / 52.  3.100
[mpegts @ 026dcd20] PES packet size mismatch
[mpegts @ 026dcd20] probed stream 2 failed
[mpegts @ 026dcd20] probed stream 3 failed
[mpegts @ 026dcd20] probed stream 4 failed
[mpegts @ 026dcd20] probed stream 5 failed
[mpegts @ 026dcd20] probed stream 6 failed
[mpegts @ 026dcd20] probed stream 7 failed
[mpegts @ 026dcd20] Could not find codec parameters for stream 2 (Unknown: none)
: unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 026dcd20] Could not find codec parameters for stream 3 (Unknown: none)
: unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 026dcd20] Could not find codec parameters for stream 4 (Unknown: none)
: unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 026dcd20] Could not find codec parameters for stream 5 (Unknown: none)
: unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 026dcd20] Could not find codec parameters for stream 6 (Unknown: none)
: unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 026dcd20] Could not find codec parameters for stream 7 (Unknown: none)
: unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 026dcd20] PES packet size mismatch
Input #0, mpegts, from 'l:/StreamIt/sub/dvbs_fail_sample_2.ts':
  Duration: 00:00:02.02, start: 8380.125011, bitrate: 20061 kb/s
  Program 1
    Metadata:
      service_name    : MET0P 16/02/13 ENC1 INTL
      service_provider: All Mobile Video
  No Program
    Stream #0:0[0x100]: Audio: ac3, 48000 Hz, 5.1(side), fltp, 448 kb/s
    Stream #0:1[0x134]: Video: mpeg2video (Main), yuv420p, 1920x1080 [SAR 1:1 DA
R 16:9], 25 fps, 25 tbr, 90k tbn, 50 tbc
    Stream #0:2[0x400]: Unknown: none
    Stream #0:3[0x404]: Unknown: none
    Stream #0:4[0x402]: Unknown: none
    Stream #0:5[0x401]: Unknown: none
    Stream #0:6[0x403]: Unknown: none
    Stream #0:7[0x405]: Unknown: none
File 'l:/toto.ts' already exists. Overwrite ? [y/N]

Attachments (1)

dvbs_fail_sample4_cut.ts (2.4 MB ) - added by Carl Eugen Hoyos 13 years ago.

Change History (15)

comment:1 by tomdouce, 13 years ago

Download sample here: http://www1.datafilehost.com/d/fcc3c6f7
(zip file 8 MB)

comment:2 by Clément Bœsch, 13 years ago

Description: modified (diff)

This is possibly a duplicate, or at least related to #153, #2024, #2223 or #2161

comment:3 by tomdouce, 13 years ago

Note: Subtitle are working correctly using VLC 1.1.4 and VLC 2.0.6

in reply to:  2 ; comment:4 by Carl Eugen Hoyos, 13 years ago

Keywords: dvbsub added; dvbs removed
Priority: importantnormal
Version: unspecifiedgit-master

Replying to ubitux:

This is possibly a duplicate, or at least related to #153, #2024, #2223 or #2161

Could you elaborate?

in reply to:  4 comment:5 by Clément Bœsch, 13 years ago

Replying to cehoyos:

Replying to ubitux:

This is possibly a duplicate, or at least related to #153, #2024, #2223 or #2161

Could you elaborate?

Brainfart I suppose, I missed the main issue here. Feel free to ignore. Sorry.

comment:6 by tomdouce, 13 years ago

The modified version of mpegts.c from xbmc project seems to solve the issue but I don't know which part is important:

https://raw.github.com/xbmc/xbmc/master/lib/ffmpeg/libavformat/mpegts.c

Last edited 13 years ago by tomdouce (previous) (diff)

comment:7 by Carl Eugen Hoyos, 13 years ago

How can I reproduce playing the subtitles with vlc? Nothing is shown here, but I probably miss how to enable subtitles in vlc from the command line.

comment:8 by tomdouce, 13 years ago

Hello,

It is possible that the sample I provided does not have any subtitle to display. The main issue is that the dvbs subtitle streams are not recognized (streams detected but codec is 'none'). Mpegts.c from xbmc project fixes this issue but I don't know which part of the source code is important.

comment:9 by Carl Eugen Hoyos, 13 years ago

Then please provide a sample that allows to reproduce the problem, that is a sample that shows subtitles with another application but not ffplay / ffmpeg.

comment:10 by tomdouce, 13 years ago

Cehoyos,

Did you read my last messages? Just open it with VLC and open Media Information window then you will see that the streams marked as unknown by FFmpeg are properly detected as dvb subtitles.
Anyway I will post a new sample.

Last edited 13 years ago by tomdouce (previous) (diff)

comment:11 by tomdouce, 13 years ago

Here is a new link: http://www1.datafilehost.com/d/b3d4ff23
Subtitles appear at the end of the playback.

by Carl Eugen Hoyos, 13 years ago

Attachment: dvbs_fail_sample4_cut.ts added

comment:12 by Carl Eugen Hoyos, 13 years ago

Keywords: regression added
Priority: normalimportant
Reproduced by developer: set
Status: newopen

comment:13 by Carl Eugen Hoyos, 13 years ago

Keywords: mpegts added

Regression since b795ff9

comment:14 by Michael Niedermayer, 13 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.